--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -20,14 +20,14 @@
     <main>
         <section>
             <article>
-                <h2>Article 1</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mol</p>
+                <h2>About BYU Speeches</h2>
+                <p>These speeches enlighten, uplift, instruct, and give hope to listeners. BYU Speeches seeks to share these powerful messages with people around the world to help them learn, progress, and feel God's love. Our website is an online repository of thousands of addresses from the 1940s to the present.</p>
             </article>
         </section>
         <section>
             <article>
-                <h2>Article 2</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mol</p>
+                <h2>Monica's Gang</h2>
+                <p>A group of six-year old friends get in nothing but trouble in the neighborhood of "Bairro do Limoeiro" in São Paulo. Based on the comic series by Mauricio de Souza.</p>
             </article>
         </section>
     </main>
