--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Israel da Silva Junior | WDD 130</title>
+  <link href="styles/style.css" rel="stylesheet" />
 </head>
 <body>
   <header>
