--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Israel da Silva Junior | WDD 130</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is my first Web page.">
+  <meta name="author" content="Israel da Silva Junior">
   <link href="styles/style.css" rel="stylesheet" />
 </head>
 <body>
