--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     <img src="images/profile.jpg" alt="Hello, my name is Israel da Silva Junior" width="200">
     <p>Hello! My name is Israel da Silva Junior and I am from São Paulo - Brazil. I love spand time with my family, rigth now I am the Bishop of my Ward and I'm looking for new ways to improve myself </p>
   </main>
+  <aside>
+    <h2>São Paulo</h2>
+    <img src="images/temple.jpg" alt="Visitors Center - At the São Paulo Temple">
+    <p>The São Paulo Brazil Temple was the first temple built in South America (and in Brazil).
+      The São Paulo Brazil Temple was originally named the São Paulo Temple.
+      Latin American members made numerous sacrifices of time, money, and material treasures to raise money for the São Paulo Brazil Temple.
+      At the time the São Paulo Brazil Temple was completed, there were only 15 stakes and about 54,000 members in the entire country. Following the dedication, an incredible 41 additional stakes were organized over the next 12 years, putting national membership at more than 300,000.
+      Before the São Paulo Brazil Temple was constructed, the closest temple to the Brazilian Saints was the Washington D.C. Temple.</p>
+  </aside>
+
+<footer>
   <footer>
     <p>©2024 Israel da Silva Junior 🤓 São Paulo 🤓 Brazil</p>
   </footer>
