--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Hello! My name is Israel da Silva Junior and I am from São Paulo - Brazil. I love spand time with my family, rigth now I am the Bishop of my Ward and I'm looking for new ways to improve myself </p>
   </main>
   <aside>
-    <h2>São Paulo</h2>
+    <h2>São Paulo - Visitor Center</h2>
     <img src="images/temple.jpg" alt="Visitors Center - At the São Paulo Temple">
     <p>The São Paulo Brazil Temple was the first temple built in South America (and in Brazil).
       The São Paulo Brazil Temple was originally named the São Paulo Temple.
