--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
     <h1>Israel da Silva Junior | WDD 130</h1>
     <img src="images/profile.jpg" alt="Hello, my name is Israel da Silva Junior" width="200">
     <p>Hello! My name is Israel da Silva Junior and I am from São Paulo - Brazil. I love spand time with my family, rigth now I am the Bishop of my Ward and I'm looking for new ways to improve myself </p>
+    <ul class="box">
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple" target="_blank">São Paulo Brazil Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple" target="_blank">Campinas Brazil Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple" target="_blank">Rio de Janeiro Brazil Temple</a></li>
+    </ul>
   </main>
-  <aside>
+  <aside class="box">
     <h2>São Paulo - Visitor Center</h2>
     <img src="images/temple.jpg" alt="Visitors Center - At the São Paulo Temple">
     <p>The São Paulo Brazil Temple was the first temple built in South America (and in Brazil).
@@ -31,8 +36,9 @@
       Before the São Paulo Brazil Temple was constructed, the closest temple to the Brazilian Saints was the Washington D.C. Temple.</p>
   </aside>
 
-<footer>
+ <footer>
   <p>©2024 Israel da Silva Junior 🤓 São Paulo 🤓 Brazil</p>
 </footer>
 </body>
+<!-- Last modified: January 26, 2024 -->
 </html>
