--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <a href="#">Home</a>
       <a href="wwr/">Rafting Website</a>
       <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+      <a href="https://www.linkedin.com/in/israel-junior-40389161/" target="_blank">LinkedIn</a> 
+      <a href="https://www.facebook.com/israelda.junior" target="_blank">Facebook</a>
     </nav>
   </header>
   <main>
