--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Rafting Project</title>
+    <title>About Us - Rafting Project | Israel da Silva Junior</title>
+    <meta name="author" content="Israel da Silva Junior">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
 
   <header>
     <!-- Logo Image -->
-    <img src="images/your_logo_image.jpg" alt="Rafting Project Logo">
+    <img src="images/logo.png" alt="Rafting Project Logo" style="width: 200px; height: auto;">
 
     <!-- Navigation -->
     <nav>
@@ -17,6 +19,7 @@
       <a href="about.html">About Us</a>
       <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
+    </nav>
     </nav>
   </header>
 
@@ -54,9 +57,17 @@
     <p>&copy; 2024 Rafting Adventures. All rights reserved. | Designed by Your Name</p>
 
     <!-- Social Media Icons -->
-    <a href="https://www.facebook.com" target="_blank"><img src="path/to/facebook_icon.png" alt="Facebook"></a>
-    <a href="https://www.twitter.com" target="_blank"><img src="path/to/twitter_icon.png" alt="Twitter"></a>
-    <a href="https://www.instagram.com" target="_blank"><img src="path/to/instagram_icon.png" alt="Instagram"></a>
+    <nav class="sociallinks">
+      <a href="https://facebook.com">
+        <img src="images/facebook.png" alt="Facebook" style="width: 50px; height: auto;">
+      </a>
+      <a href="https://twitter.com">
+        <img src="images/twitter.png" alt="Twitter" style="width: 50px; height: auto;">
+      </a>
+      <a href="https://instagram.com">
+        <img src="images/instagram.png" alt="Instagram" style="width: 50px; height: auto;">
+      </a>
+    </nav>
   </footer>
 
 </body>
