--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 
   <header>
     <!-- Logo Image -->
-    <img src="images/logo.png" alt="Rafting Project Logo" style="width: 200px; height: auto;">
+    <img src="images/logo.png" alt="Rafting Project Logo" style="width: 100px; height: auto;">
 
     <!-- Navigation -->
     <nav>
@@ -26,13 +26,13 @@
   <main>
     <!-- Hero Section -->
     <div class="hero">
-      <img src="images/hero_image.jpg" alt="Rafting Adventure">
+      <img src="images/image01.jpg" alt="Rafting Adventure">
       <h1>Rafting Adventures</h1>
     </div>
 
     <!-- About Section -->
     <article>
-      <img src="images/happy_client.jpg" alt="Happy Client">
+      <img src="images/image04.jpg" alt="Happy Client">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
 
@@ -45,11 +45,11 @@
     <!-- Adventure Section -->
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="images/rafting_image1.jpg" alt="Rafting Image 1">
-      <img src="images/rafting_image2.jpg" alt="Rafting Image 2">
-      <img src="images/rafting_image3.jpg" alt="Rafting Image 3">
-      <img src="images/rafting_image4.jpg" alt="Rafting Image 4">
-      <img src="images/rafting_image5.jpg" alt="Rafting Image 5">
+      <img src="images/image02.jpg" alt="Rafting Image 1">
+      <img src="images/image05.jpg" alt="Rafting Image 2">
+      <img src="images/image06.jpg" alt="Rafting Image 3">
+      <img src="images/image07.jpg" alt="Rafting Image 4">
+      <img src="images/image03.jpg" alt="Rafting Image 5">
     </section>
   </main>
 
