--- a/wwr/about.html
+++ b/wwr/about.html
@@ -58,13 +58,13 @@
 
     <!-- Social Media Icons -->
     <nav class="sociallinks">
-      <a href="https://facebook.com">
+      <a href="https://www.facebook.com/israelda.junior">
         <img src="images/facebook.png" alt="Facebook" style="width: 50px; height: auto;">
       </a>
-      <a href="https://twitter.com">
+      <a href="https://twitter.com/IsraeldaSilvaJ4">
         <img src="images/twitter.png" alt="Twitter" style="width: 50px; height: auto;">
       </a>
-      <a href="https://instagram.com">
+      <a href="https://www.instagram.com/israeljunioritanhaem/">
         <img src="images/instagram.png" alt="Instagram" style="width: 50px; height: auto;">
       </a>
     </nav>
