--- a/wwr/about.html
+++ b/wwr/about.html
@@ -54,7 +54,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Rafting Adventures. All rights reserved. | Designed by Your Name</p>
+    <p>&copy; 2024 Rafting Adventures. All rights reserved. | Israel da Silva Junior</p>
 
     <!-- Social Media Icons -->
     <nav class="sociallinks">
