--- a/about.html
+++ b/about.html
@@ -24,7 +24,13 @@
  
   <div class="grid"></div>
       <main>
-        <!-- Home page content -->
+         <section>
+             <h1>About Us</h1>
+             <img src="images/about.jpg" alt="About Us Image" width="400">
+             <p>Welcome to our company, where we value family, community, and hope. We are proud members of The Church of Jesus Christ of Latter-day Saints, and our beliefs inspire us to create a welcoming and inclusive environment for all.</p>
+             <p>At our company, we believe that families are central to our purpose, and we strive to create opportunities for families to grow and bond through our rafting adventures. We also prioritize giving back to our community, whether through service projects or supporting local initiatives.</p>
+             <p>Our hope is to provide not only thrilling rafting experiences but also moments of joy, connection, and spiritual rejuvenation. We invite you to join us on the river and experience the beauty of nature while strengthening your bonds with family and friends.</p>
+         </section>
       </main>
       <aside class="box">
         <!-- Sidebar content -->
