--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,15 @@
   </header>
  
   <div class="grid"></div>
-      <main>
-        <!-- Home page content -->
-      </main>
+  <main>
+    <section>
+        <h1>Contact Us</h1>
+        <!-- Contact Us page content -->
+        <img src="images/contact.jpg" alt="Contact Us Image" width="400">
+        <p>Contact information and a form for user input.</p>
+    </section>
+  </main>
+
       <aside class="box">
         <!-- Sidebar content -->
       </aside>
